docs 3ieme flag