@@ -55,6 +55,18 @@ JSoup processes large HTML documents in memory, so managing heap size effectivel
 Permet de diminuer la taille des pointeurs à 64 bits pour sauver de l'espace mémoire.
 "-XX:+UseCompressedOops" 
 
+# Flag 3 : Garbage Collection détaillés
+But et pouquoi : Supprimer les objects inutiles et non utilisés de la mémoire.
+C'est avantageux,car cela nous permet de ne pas gérer manuellement la mémorie allouée ou encore les fuites de mémoire.
+
+On utilise UseG1GC, car ce flag est conçu pour les applications avec une quantité de mémoire vaste. Dans le cas où c'est applications nécéssitent des pauses de GarbageCollection,  G1 diminue le temps des longues pauses. Elle reste pertinante pour la libraire jSoup, car si on a une application qui utilise jsoup dans un environnement de production par exemple (pages webs avec beacoup de traffics tels que les moteurs de recherches comme Google, Wikipédia, etc.) pour des outils, parser ou encore extraire des données, ça diminue le temps de latence.
+
+PrintGCDetails permet d'afficher des infos détaillés sur le processus de collection des Garbage. Ce qui peut être bien pour débugger et surveiller les performances. Dans un librairie comme jSoup, ce serait pertinent de l'utiliser dans un environnement de test lorsqu'il y a des problèemes de mémoire ou d'optimisation.
+PrintGCDateStamps fournit un date stamp c'est pertinent pour analyser les performances de la JVM ou diagnostiquer des problèmes de latence dans les applications qui utilisent jSoup.
+
+Les 2 derniers sont utiles dans un environnement de développement ou de test,puisque la tâche 3 concerne l'automatisation des tests sur divers environnements, cela semble quand même pertinent.
+"-XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
+
 
 
 
